@@ -1,3 +1,9 @@
+2009-02-17  Diego Novillo  <dnovillo@google.com>
+
+	PR 39203
+	* c-opts.c (c_common_post_options): Disable -fwhole-program
+	when generating IL.
+
 2009-02-16  Rafael Avila de Espindola  <espindola@google.com>
 
 	PR 39010
